2001-07-02  Loren J. Rittle  <ljrittle@acm.org>

	* acinclude.m4 (GLIBCPP_ENABLE_THREADS): Protect variable from shell
	expansion (thanks to Alexandre Oliva).
	* aclocal.m4: Regenerate.
	* configure: Regenerate.

2001-07-02  Benjamin Kosnik  <bkoz@redhat.com>
	
	* src/locale.cc (locale::locale(const char*)): Make sure global
	locales are initialized.
	* include/bits/locale_facets.tcc (locale::combine): Refcout should
	be zero, not one as it's return-by-value.
	* testsuite/27_io/ios_base_callbacks.cc (test01): Don't check for
	named locales here.
	* testsuite/22_locale/ctor_copy_dtor.cc (test01): Instead, check
	for it here.
	(test02): Add test.
	* libsupc++/eh_alloc.cc: Use climits, not limits.h.

2001-07-02  Loren J. Rittle  <ljrittle@acm.org>

	libstdc++/3284
	* acinclude.m4 (GLIBCPP_ENABLE_THREADS): Portability enhancement.
	* aclocal.m4: Regenerate.
	* configure: Regenerate.
	
2001-07-02  Loren J. Rittle  <ljrittle@acm.org>

	libstdc++/3243
	* acinclude.m4 (GLIBCPP_ENABLE_THREADS): Add relative path to
	staged/installed area to support -I-.  Document.
	* aclocal.m4: Regenerate.
	* configure: Regenerate.

2001-07-02  Loren J. Rittle  <ljrittle@acm.org>

	libstdc++/2211
	* src/ios.cc (ios_base::Init::_S_ios_create): Rename __bufsize to
	__out_bufsize.  Add __in_bufsize, document it and use it.  

2001-07-01  Stephen M. Webb <stephen@bregmasoft.com>

	* include/bits/stl_construct.h (construct): Remove.
      	(destroy): Remove.
      	(__destroy): Replaced by use of iterator_traits.
	* include/bits/stl_deque.h: replaced HP iterator functions with
	iterator_traits.
        (construct): changed to _Construct.
	(destroy): changed to _Destroy.
	* include/bits/stl_tempbuf.h: Same.
	* include/bits/stl_tree.h: Same.
	* include/bits/stl_vector.h: Same.
	* include/backward/iterator.h (construct): moved definition to here.
	(destroy): Same.

2001-06-29  Benjamin Kosnik  <bkoz@redhat.com>

	* include/bits/locale_facets.tcc (locale::combine): Clone _Impl.