@@ -48,7 +48,7 @@ namespace std
     locale
     locale::combine(const locale& __other)
     {
-      _Impl* __tmp = new _Impl(*_M_impl, 0);
+      _Impl* __tmp = new _Impl(*_M_impl, 1);
       __tmp->_M_replace_facet(__other._M_impl, &_Facet::id);
       return locale(__tmp);
     }
